--- a/mos.yml
+++ b/mos.yml
@@ -17,6 +17,10 @@ sources:
 includes:
   - include
 
+libs:
+  # - origin: https://github.com/mongoose-os-libs/arduino-compat
+  - origin: https://github.com/mongoose-os-libs/arduino-spi
+
 tags:
   - c
   - docs:misc:Empty
