--- a/mos.yml
+++ b/mos.yml
@@ -18,7 +18,7 @@ includes:
   - include
 
 libs:
-  # - origin: https://github.com/mongoose-os-libs/arduino-compat
+  - origin: https://github.com/mongoose-os-libs/arduino-compat
   - origin: https://github.com/mongoose-os-libs/arduino-spi
 
 tags:
